Split server and hid from URL.

--- a/app/views/tag_pro_profiles/show.html.erb
+++ b/app/views/tag_pro_profiles/show.html.erb
@@ -15,4 +15,9 @@
   <%= @tag_pro_profile.uid %>
 </p>
 
+<p>
+  <strong>Url:</strong>
+  <%= link_to @tag_pro_profile.url, @tag_pro_profile.url %>
+</p>
+
 <%= link_to 'Edit', edit_tag_pro_profile_path %>
