--- a/app/views/tag_pro_profiles/_form.html.erb
+++ b/app/views/tag_pro_profiles/_form.html.erb
@@ -12,12 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :server %><br>
-    <%= f.text_field :server %>
-  </div>
-  <div class="field">
-    <%= f.label :uid %><br>
-    <%= f.text_field :uid %>
+    <%= f.label :url %><br>
+    <%= f.text_field :url %>
   </div>
   <div class="actions">
     <%= f.submit %>
