--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -13,7 +13,7 @@
 <em>Link your TagPro account.</em>
 <% if current_user %>
   <% if current_user.tag_pro_profile && current_user.tag_pro_profile.persisted? %>
-    <p>You linked <%= link_to "#{current_user.tag_pro_profile.name} on #{current_user.tag_pro_profile.server}", current_user.tag_pro_profile.url %>.</p>
+    <p>You linked <%= link_to "#{current_user.tag_pro_profile.name} on #{current_user.tag_pro_profile.server.humanize}", current_user.tag_pro_profile.url %>.</p>
   <% else %>
     <% @tag_pro_profile = current_user.tag_pro_profile || current_user.build_tag_pro_profile %>
     <%= render 'tag_pro_profiles/form' %>
