--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -28,7 +28,7 @@
   <% else %>
     <%= form_for current_user, url: user_path do |f| %>
       <div class="field">
-        <%= f.collection_radio_buttons :flair_class, current_user.tag_pro_profile.flairs, :flair_class, :description, include_blank: true do |b| %>
+        <%= f.collection_radio_buttons :flair_class, current_user.tag_pro_profile.flairs, :flair_class, :description do |b| %>
           <%= b.label do %>
             <%= b.radio_button %>
             <div class="flair" style="background-image: url(http://tagpro-<%= current_user.tag_pro_profile.server %>.koalabeast.com/images/flair.png); background-position: <%= b.object.position_for_css %>;"></div>
