--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -6,7 +6,7 @@
 <% if current_user %>
   <p>You are authenticated as <%= link_to current_user.name, "http://www.reddit.com/user/#{current_user.name}" %>.</p>
 <% else %>
-  <p><%= link_to "Link your reddit account", user_omniauth_authorize_path(:reddit) %> to begin.</p>
+  <p><%= link_to 'Link your reddit account', user_omniauth_authorize_path(:reddit) %> to begin.</p>
 <% end %>
 
 <h2>Step 2</h2>
