--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -15,6 +15,7 @@
   <% if current_user.tag_pro_profile && current_user.tag_pro_profile.persisted? %>
     <p>You linked <%= link_to "#{current_user.tag_pro_profile.name} on #{current_user.tag_pro_profile.server.humanize}", current_user.tag_pro_profile.url %>.</p>
   <% else %>
+    <em>Copy your profile URL. It looks like http://tagpro-{server}.koalabeast.com/profile/{id}.</em>
     <% @tag_pro_profile = current_user.tag_pro_profile || current_user.build_tag_pro_profile %>
     <%= render 'tag_pro_profiles/form' %>
   <% end %>
