--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -42,7 +42,7 @@
       </div>
       <div class="field">
         <%= f.label :flair_text %><br>
-        <%= f.text_field :flair_text, value: current_user.flair_text || "#{current_user.name} // #{current_user.tag_pro_profile.server.humanize}" %>
+        <%= f.text_field :flair_text, value: current_user.flair_text || "#{current_user.tag_pro_profile.name} // #{current_user.tag_pro_profile.server.humanize}" %>
       </div>
       <div class="actions">
         <%= f.submit %>
