--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -42,7 +42,11 @@
       </div>
       <div class="field">
         <%= f.label :flair_text %><br>
-        <%= f.text_field :flair_text, value: current_user.flair_text || "#{current_user.tag_pro_profile.name} // #{current_user.tag_pro_profile.server.humanize}" %>
+        <%= f.text_field :flair_text, value: current_user.flair_text || "#{current_user.tag_pro_profile.name} // #{current_user.tag_pro_profile.server.humanize}" %><br>
+        <em>
+          Add your in-game name, server, and team name!<br>
+          Example: Some Ball // <%= current_user.tag_pro_profile.server.humanize %> // Ampersaints
+        </em>
       </div>
       <div class="actions">
         <%= f.submit %>
